plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'specmate'
version = '0.0.1-SNAPSHOT'
description = 'backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url "https://repo.spring.io/milestone" }
}

springBoot {
    mainClass = 'specmate.backend.BackendApplication'
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation(enforcedPlatform("org.springframework.ai:spring-ai-bom:1.0.0-M5"))
    implementation "org.springframework.ai:spring-ai-core"
    implementation "org.springframework.ai:spring-ai-openai-spring-boot-starter"
    implementation "org.springframework.ai:spring-ai-pgvector-store-spring-boot-starter"
    implementation "io.qdrant:client:1.9.0"
    runtimeOnly 'org.postgresql:postgresql'
    implementation "com.vladmihalcea:hibernate-types-60:2.21.1"
    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.8.0'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'org.apache.commons:commons-text:1.11.0'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
    implementation 'org.springframework.boot:spring-boot-loader-tools:3.4.6'
    implementation 'org.apache.commons:commons-compress:1.26.1'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
